About Text Change

--- a/template/views/about.hbs
+++ b/template/views/about.hbs
@@ -8,6 +8,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site is create by Vijay jaiswal using mapbox and weatherstack api</p>
         <img class = "portrait" src = "img/robot.png">
     </div>
 
